--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>disruptor</artifactId>
       <version>3.4.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.28</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
     <build>
